--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="timeline-dot"></div>
                     <div class="timeline-date">2019</div>
                     <div class="timeline-content">
-                        <h3>Manvel High School || Manvel, TX</h3>
+                        <h3>Manvel High School  |  Manvel, TX</h3>
                         <p> At Manvel High School, I was actively involved in various activities that shaped 
                             my interests and skills. I worked as a techie for the school musicals, contributing to the behind-the-scenes magic of 
                             our productions. During my senior year, I discovered a passion for coding, where I created my own video game and designed 
@@ -88,7 +88,7 @@
                 <div class="timeline-dot"></div>
                     <div class="timeline-date">2021</div>
                     <div class="timeline-content">
-                        <h3>Alvin Community College || Alvin, TX</h3>
+                        <h3>Alvin Community College  |  Alvin, TX</h3>
                         <p> While earning my Associate's degree in General Studies at Alvin Community College, I gained a well-rounded education 
                             that helped me explore a variety of subjects and sharpen my critical thinking skills. The diverse coursework allowed 
                             me to develop a strong foundation in communication, problem-solving, and analytical reasoning. Through these experiences, 
@@ -101,12 +101,12 @@
                 <div class="timeline-dot"></div>
                     <div class="timeline-date">2023</div>
                     <div class="timeline-content">
-                        <h3>University of Houston - Clear Lake || Houston, TX</h3>
+                        <h3>University of Houston - Clear Lake  |  Houston, TX</h3>
                         <p>While earning my Bachelor of Science in Healthcare Administration, I gained valuable insights into managing healthcare 
                         systems, improving patient care, and understanding the complexities of the healthcare industry. Outside of academics, I was an 
                         active member of ROSAS, a group that provided a safe space for Hispanic women and allies. Together, we volunteered in the 
                         community and traveled to Austin, building meaningful connections and making a positive impact. I also joined the Black Student 
-                        Association (BSA), where we fostered camaraderie through board games, card games, and outings to places like Main Event. 
+                        Association (BSA), where we fostered camaraderie through board games, card games, and outings. 
                         These experiences not only enriched my education but also deepened my sense of community and teamwork.</p>
                         </p>
                     </div>
