--- a/index.html
+++ b/index.html
@@ -71,24 +71,12 @@
 
         <div class="timeline-items">
 
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                    <div class="timeline-date">2019</div>
-                    <div class="timeline-content">
-                        <h3>Manvel High School  |  Manvel, TX</h3>
-                        <p> At Manvel High School, I was actively involved in various activities that shaped 
-                            my interests and skills. I worked as a techie for the school musicals, contributing to the behind-the-scenes magic of 
-                            our productions. During my senior year, I discovered a passion for coding, where I created my own video game and designed 
-                            several websites, igniting my interest in technology and programming. These experiences allowed me to explore my creativity 
-                            and develop valuable technical and teamwork skills.</p>
-                    </div>
-            </div>
       
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
                     <div class="timeline-date">2021</div>
                     <div class="timeline-content">
-                        <h3>Alvin Community College  |  Alvin, TX</h3>
+                        <h3>Alvin Community College  //  Alvin, TX</h3>
                         <p> While earning my Associate's degree in General Studies at Alvin Community College, I gained a well-rounded education 
                             that helped me explore a variety of subjects and sharpen my critical thinking skills. The diverse coursework allowed 
                             me to develop a strong foundation in communication, problem-solving, and analytical reasoning. Through these experiences, 
@@ -101,7 +89,7 @@
                 <div class="timeline-dot"></div>
                     <div class="timeline-date">2023</div>
                     <div class="timeline-content">
-                        <h3>University of Houston - Clear Lake  |  Houston, TX</h3>
+                        <h3>University of Houston - Clear Lake  //  Houston, TX</h3>
                         <p>While earning my Bachelor of Science in Healthcare Administration, I gained valuable insights into managing healthcare 
                         systems, improving patient care, and understanding the complexities of the healthcare industry. Outside of academics, I was an 
                         active member of ROSAS, a group that provided a safe space for Hispanic women and allies. Together, we volunteered in the 
@@ -118,15 +106,12 @@
                 <div class="timeline-dot">  </div>
                     <div class="timeline-date">2025</div>
                     <div class="timeline-content">
-                        <h3>Software Engineering Bootcamp @ University of Houston || Houston, TX</h3>
-                        <p> At the software engineering bootcamp, I gained comprehensive knowledge and hands-on experience in various aspects of 
-                            software development. I learned foundational concepts like the principles of engineering and software development, as 
-                            well as advanced topics such as system and software design, UML, and agile methodologies like Scrum. I mastered tools 
-                            and languages, including Git & GitHub, HTML & CSS, JavaScript (including modern frameworks like React, React Router, 
-                            and Redux), Python, SQL, and Node.js. Additionally, I explored UX design, product management, and data structures and 
-                            algorithms. Through multiple projects, I honed my skills in creating interactive web pages, implementing object-oriented 
-                            programming, and building efficient, user-friendly applications. This immersive experience prepared me to thrive in real-world 
-                            software engineering environments.</p>
+                        <h3>Accelerated Software Engineering Bachelor's and Master's Degree // Milcreek, UT</h3>
+                        <p> I am currently pursuing an Accelerated Software Engineering Bachelor's and Master's Degree at Western Governors 
+                            University. This rigorous program covers essential topics such as data structures and algorithms, software 
+                            development methodologies, system design, cloud computing, cybersecurity, and database management. Through hands-on 
+                            projects and real-world applications, I am gaining expertise in full-stack development, software architecture, and 
+                            agile practices, equipping me with the skills needed to build scalable, secure, and efficient software solutions. <p>
                     </div>
             </div>
             
